--- a/src/app/components/site/application/main.component.html
+++ b/src/app/components/site/application/main.component.html
@@ -11,11 +11,9 @@
 </section>
 
 
-<!--
 <section class="section_expertise">
     <app-expertise></app-expertise>
-</section>-->
-
+</section>
 
 <section class="section_tariffs">
     <app-tariffs></app-tariffs>
@@ -24,6 +22,9 @@
 <!--
 <section class="section_professionals">
     <app-professionals></app-professionals>
+</section>
+
+<section class="section_professionals">
     <app-cases></app-cases>
 </section>
 
