--- a/src/app/components/site/expertise/expertise-desc.component.html
+++ b/src/app/components/site/expertise/expertise-desc.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="h-[140px]">
     <svg id="line" xmlns="http://www.w3.org/2000/svg" width="3" height="100" viewBox="0 0 3 100" fill="none">
         <rect width="3" height="100" fill="#F14D34"/>
     </svg>
