--- a/src/app/components/site/expertise/expertise.component.html
+++ b/src/app/components/site/expertise/expertise.component.html
@@ -1,18 +1,18 @@
 <div id="block4">
-    <img src="/assets/img/Rectangle 3.3.svg" id="background-img-shadow" alt="Notebook">
-    <img src="/assets/img/Group_note.svg" id="background-img" alt="Notebook">
-    <div id="inner-block">
-        <div class="flex">
-            <div id="title">
-                Экспертиза в Drupal, опыт 14 лет!
+    <div id="ghost-block">
+        <div id="inner-block">
+            <div class="flex">
+                <div id="title">
+                    Экспертиза в Drupal, опыт 14 лет!
+                </div>
             </div>
-        </div>
-        <div class="flex">
-            <div class="grid grid-cols-2 gap-y-[40px]">
-                <expertise-desc innerText="Только системный подход – контроль версий, резервирование и тестирование!"></expertise-desc>
-                <expertise-desc innerText="Только Drupal сайты, не берем на поддержку сайты на других CMS!"></expertise-desc>
-                <expertise-desc innerText="Участвуем в разработке ядра Drupal и модулей на Drupal.org, разрабатываем <a href='/' class='text-orange-400'>свои модули Drupal</a>"></expertise-desc>
-                <expertise-desc innerText="Поддерживаем сайта на Drupal 5, 6, 7 и 8"></expertise-desc>
+            <div class="flex">
+                <div class="lg:grid lg:grid-cols-2">
+                    <expertise-desc innerText="Только системный подход – контроль версий, резервирование и тестирование!"></expertise-desc>
+                    <expertise-desc innerText="Только Drupal сайты, не берем на поддержку сайты на других CMS!"></expertise-desc>
+                    <expertise-desc innerText="Участвуем в разработке ядра Drupal и модулей на Drupal.org, разрабатываем <a href='/' class='text-orange-400'>свои модули Drupal</a>"></expertise-desc>
+                    <expertise-desc innerText="Поддерживаем сайты на Drupal 5, 6, 7 и 8"></expertise-desc>
+                </div>
             </div>
         </div>
     </div>
