--- a/src/app/components/site/header/header.component.html
+++ b/src/app/components/site/header/header.component.html
@@ -1,5 +1,5 @@
 <div id="render_head" class="w-full absolute top-0"></div>
-<div class="flex h-screen md:h-[650px]">
+<div class="flex h-auto md:h-[650px]">
   <div id="block1">
     <div class="my-4 md:my-8">
 
@@ -33,24 +33,26 @@
                 <button (click)="showPopUp()">СВЯЗЬ С НАМИ</button>
               </div>
             
-              <div class="grid grid-cols-2 lg:grid-cols-3 transform md:translate-x-[210px]">
-                <div class="h-32 mb-2">
-                  <drupal-desc titleClass="one-place" titleText="#1" titleImgLink="/assets/img/cup.png" innerText="Drupal-разработчик <br> в России по версии <br> Рейтинга Рунета"></drupal-desc>
-                </div>
-                <div class="h-32 mb-2">
-                  <drupal-desc titleClass="common" titleText="3+" innerText="средний опыт <br> специалистов более <br> 3 лет"></drupal-desc>
-                </div>
-                <div class="h-32 mb-2">
-                  <drupal-desc titleClass="common" titleText="14" innerText="лет опыта в сфере <br> Drupal"></drupal-desc>
-                </div>
-                <div class="h-32 mb-2">
-                  <drupal-desc titleClass="common" titleText="200+" innerText="модулей и тем <br> в формате DrupalGive"></drupal-desc>
-                </div>
-                <div class="h-32 mb-16">
-                  <drupal-desc titleClass="common" titleText="35 000" innerText="часов поддержки <br> сайтов на Drupal"></drupal-desc>
-                </div>
-                <div class="h-32 mb-16">
-                  <drupal-desc titleClass="common" titleText="200+" innerText="Проектов <br> на поддержке"></drupal-desc>
+              <div>
+                <div class="grid grid-cols-2 lg:grid-cols-3 transform md:translate-x-[210px]">
+                  <div class="h-32 mb-2">
+                    <drupal-desc titleClass="one-place" titleText="#1" titleImgLink="/assets/img/cup.png" innerText="Drupal-разработчик <br> в России по версии <br> Рейтинга Рунета"></drupal-desc>
+                  </div>
+                  <div class="h-32 mb-2">
+                    <drupal-desc titleClass="common" titleText="3+" innerText="средний опыт <br> специалистов более <br> 3 лет"></drupal-desc>
+                  </div>
+                  <div class="h-32 mb-2">
+                    <drupal-desc titleClass="common" titleText="14" innerText="лет опыта в сфере <br> Drupal"></drupal-desc>
+                  </div>
+                  <div class="h-32 mb-2">
+                    <drupal-desc titleClass="common" titleText="200+" innerText="модулей и тем <br> в формате DrupalGive"></drupal-desc>
+                  </div>
+                  <div class="h-32 mb-16">
+                    <drupal-desc titleClass="common" titleText="35 000" innerText="часов поддержки <br> сайтов на Drupal"></drupal-desc>
+                  </div>
+                  <div class="h-32 mb-16">
+                    <drupal-desc titleClass="common" titleText="200+" innerText="Проектов <br> на поддержке"></drupal-desc>
+                  </div>
                 </div>
               </div>
             </div>
