--- a/src/app/components/site/support/support-block.component.html
+++ b/src/app/components/site/support/support-block.component.html
@@ -1,7 +1,9 @@
 <div id="block">
     <div [style.background-image]="getImgUrl()" id="sblock">
-        <div id="idtext"> {{ getId() }} </div>
-        <div id="titletext"> {{ titleText }} </div>
-        <div id="innertext"> {{ innerText }} </div>
+        <div class="px-[26px]">
+            <div id="idtext"> {{ getId() }} </div>
+            <div id="titletext"> {{ titleText }} </div>
+            <div id="innertext"> {{ innerText }} </div>
+        </div>
     </div>
 </div>
