--- a/src/app/components/site/expertise/expertise-desc.component.css
+++ b/src/app/components/site/expertise/expertise-desc.component.css
@@ -1,5 +1,5 @@
 #text {
-    width: 257px;
+    width: 190px;
     color: var(--White, #FFF);
 
     font-family: Montserrat;
@@ -10,6 +10,12 @@
 
     opacity: 0.7;
     margin-left: 20px;
+}
+
+@media only screen and (min-width: 1280px) {
+    #text {
+        width: 257px;
+    }
 }
 
 #line {
