--- a/src/app/components/site/support/support-block.component.css
+++ b/src/app/components/site/support/support-block.component.css
@@ -12,13 +12,12 @@
     box-shadow: 0px 28px 42px rgba(0, 0, 0, 0.1);
     background-repeat: no-repeat;
     background-position: bottom right;
-    padding-left: 26px;
     padding-top: 27px;
     margin-bottom: 4px;
 }
 
 #titletext {
-    width: 342px;
+    width: 90%;
     color: var(--main-black, #050C33);
     font-family: Montserrat;
     font-size: 18px;
@@ -29,7 +28,7 @@
 }
 
 #innertext {
-    width: 333px;
+    width: 90%;
     color: var(--main-black, #050C33);
     font-family: Montserrat;
     font-size: 16px;
