--- a/src/app/components/site/support/support.component.css
+++ b/src/app/components/site/support/support.component.css
@@ -1,6 +1,7 @@
 #block3 {
-    z-index: 1;
-    margin-bottom: 390px;
+    position: relative;
+    z-index: 50;
+    flex-shrink: 0;
 }
 
 #title {
@@ -12,7 +13,6 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    
 }
 
 @media only screen and (min-width: 640px) {
@@ -20,11 +20,5 @@
         font-size: 42px; 
         width: 406px;
         margin-bottom: 56px;
-    }
-
-    #blocks {
-        position: absolute;
-        left: 50%;
-        transform: translate(-50%, 0);
     }
   }
