--- a/src/app/components/site/cases/cases.component.html
+++ b/src/app/components/site/cases/cases.component.html
@@ -5,7 +5,7 @@
                 Последние кейсы
             </div>
             <div class="flex justify-center">
-                <div class="grid grid-cols-3 gap-x-[20px] gap-y-[20px]">
+                <div class="lg:grid lg:grid-cols-3 lg:gap-x-[20px] lg:gap-y-[20px]">
                     <image-small ImgLink="/assets/img/s1.png" title="Настройка выгрузки YML для Яндекс.Маркета" date="22.04.2019" description="Эти слова совершенно справедливы, однако гипнотический рифф продолжает паузный пласт."></image-small>
                     <image-large class="col-span-2" ImgLink="/assets/img/s2.png" title="Настройка выгрузки YML для Яндекс.Маркета"></image-large>
                     <image-medium ImgLink="/assets/img/s3.png" title="Настройка выгрузки YML для Яндекс.Маркета" date="22.04.2019"></image-medium>
