--- a/src/app/components/site/team/team-block.component.css
+++ b/src/app/components/site/team/team-block.component.css
@@ -1,17 +1,17 @@
 #team {
-    margin-bottom: 55px;
+    margin-bottom: 25px;
 }
 
 img {
-    width: 280px;
-    height: 280px;
+    width: 150px;
+    height: 150px;
     object-fit: cover;
     flex-shrink: 0;
-    margin-bottom: 30px;
+    margin-bottom: 5px;
 }
 
 #title {
-    width: 280px;
+    width: 180px;
     color: var(--main-black, #050C33);
     font-family: Montserrat;
     font-size: 16px;
@@ -21,14 +21,36 @@ img {
 }
 
 #desc {
-    width: 280px;
+    width: 160px;
     color: var(--main-black, #050C33);
-
 /* text/16px */
     font-family: Montserrat;
-    font-size: 16px;
+    font-size: 12px;
     font-style: normal;
     font-weight: 500;
-    line-height: 22px; /* 137.5% */
-    opacity: 0.7;
+    line-height: 17px; /* 137.5% */
+}
+
+@media only screen and (min-width: 640px) {
+    #desc {
+        width: 280px;
+        opacity: 0.7;
+        line-height: 22px; 
+        font-size: 16px;
+    }
+
+    #title {
+        width: 280px;
+    }
+
+    #team {
+        margin-bottom: 55px;
+    }
+
+    img {
+        height: 280px;
+        width: 280px;
+        margin-bottom: 30px;
+    }
+
 }
