--- a/src/app/components/site/application/main.component.html
+++ b/src/app/components/site/application/main.component.html
@@ -10,28 +10,27 @@
     <app-support></app-support>
 </section>
 
-
-<!--
-<section class="section_expertise">
+<!-- <section class="section_expertise">
     <app-expertise></app-expertise>
-</section>-->
-
+</section> -->
 
 <section class="section_tariffs">
     <app-tariffs></app-tariffs>
 </section>
 
-<!--
 <section class="section_professionals">
     <app-professionals></app-professionals>
-    <app-cases></app-cases>
-</section>
+</section> 
 
 <section class="section_team">
     <app-team></app-team>
+</section> 
+
+<section class="section_professionals">
+    <app-cases></app-cases>
 </section>
 
-<section class="section_feedback">
+<!-- <section class="section_feedback">
     <app-feedback></app-feedback>
 </section>
 
@@ -46,6 +45,5 @@
 <section class="section_footer">
     <app-footer></app-footer>
 </section>
--->
 
 <router-outlet></router-outlet> -->
