--- a/src/app/components/site/cases/cases.component.css
+++ b/src/app/components/site/cases/cases.component.css
@@ -32,9 +32,16 @@
 #title {
     color: var(--main-black, #050C33);
     font-family: Montserrat;
-    font-size: 42px;
+    font-size: 24px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
     margin-bottom: 60px;
+}
+
+@media only screen and (min-width: 640px) {
+    #title {
+        font-size: 42px;
+    }
+
 }
