--- a/src/app/components/site/info/info-desc.component.css
+++ b/src/app/components/site/info/info-desc.component.css
@@ -21,7 +21,7 @@
     color: var(--main-black, #050C33);
     width: 182px;
     font-family: Montserrat;
-    font-size: 16px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 500;
     line-height: 22px;
@@ -36,7 +36,12 @@
     .desc-block {
       margin-right: 117px;
     }
+
     #pics{
       margin-left:0px;
+    }
+
+    .desc-text {
+      font-size: 16px;
     }
   }
