--- a/src/app/components/site/professionals/professional-block.component.html
+++ b/src/app/components/site/professionals/professional-block.component.html
@@ -1,5 +1,5 @@
-<div class="desc-block flex flex-col">
-    <div class="w-1/2">
+<div class="desc-block">
+    <div class="pics w-1/2">
         <img src="/assets/img/icon-bg.svg" alt="Логотип" class="icon-b">
         <img [src]="ImgLink" alt="Логотип" class="icon-m">
     </div>
