--- a/src/app/components/site/professionals/professionals.component.css
+++ b/src/app/components/site/professionals/professionals.component.css
@@ -1,14 +1,25 @@
 #block-9 {
-    margin-bottom: 160px;
+    margin-bottom: 55px;
 }
 
 #title {
-    width: 980px;
+    width: 370px; 
     color: var(--main-black, #050C33);
     font-family: Montserrat;
-    font-size: 42px;
+    font-size: 24px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
     margin-bottom: 60px;
 }
+
+@media only screen and (min-width: 640px) {
+    #title {
+        font-size: 42px;
+        width: 980px;
+    }
+
+    #block-9 {
+        margin-bottom: 160px;
+    }
+}    
