--- a/src/app/components/site/professionals/professional-block.component.html
+++ b/src/app/components/site/professionals/professional-block.component.html
@@ -1,10 +1,10 @@
 <div class="desc-block">
-    <div class="pics w-1/2">
-        <img src="/assets/img/icon-bg.svg" alt="Логотип" class="icon-b">
-        <img [src]="ImgLink" alt="Логотип" class="icon-m">
+    <div class="flex sm:justify-center lg:justify-start">
+        <div>
+            <img src="/assets/img/icon-bg.svg" alt="Логотип" class="icon-b">
+            <img [src]="ImgLink" alt="Логотип" class="icon-m">
+            <div id="title"> {{title}} </div>
+        </div>
     </div>
-    <div class="w-1/2">
-        <div id="title"> {{title}} </div>
-        <div id="description"> {{description}} </div>
-    </div>
+    <div id="description"> {{description}} </div>
 </div>
