--- a/src/app/components/site/professionals/professionals.component.css
+++ b/src/app/components/site/professionals/professionals.component.css
@@ -3,7 +3,7 @@
 }
 
 #title {
-    width: 370px; 
+    width: 100%; 
     color: var(--main-black, #050C33);
     font-family: Montserrat;
     font-size: 24px;
@@ -16,10 +16,17 @@
 @media only screen and (min-width: 640px) {
     #title {
         font-size: 42px;
-        width: 980px;
+        width: 370px;
     }
 
     #block-9 {
         margin-bottom: 160px;
     }
-}    
+}
+
+@media only screen and (min-width: 1024px) {
+    #title {
+        font-size: 42px;
+        width: 980px;
+    }
+}
