--- a/src/app/components/site/professionals/professionals.component.html
+++ b/src/app/components/site/professionals/professionals.component.html
@@ -1,10 +1,14 @@
-<div class="flex justify-center">
-    <div id="block-9">
-        <div id="title">Наши профессиональные разработчики выполняют быстро любые задачи</div>
-        <div class="lg:grid lg:grid-cols-3 lg:gap-x-[200px] ml-[100px]">
-            <professional-block ImgLink="/assets/img/competency-20.svg" title="от 1ч" description="Настройка события GA в интернет-магазине"></professional-block>
-            <professional-block ImgLink="/assets/img/competency-21.svg" title="от 20ч" description="Разработка мобильной версии сайта"></professional-block>
-            <professional-block ImgLink="/assets/img/competency-22.svg" title="от 8ч" description="Интеграция модуля оплаты"></professional-block>
+<div id="block-9">
+    <div class="flex justify-center">
+        <div>
+            <div id="title">Наши профессиональные разработчики выполняют быстро любые задачи</div>
+            <div class="flex justify-center">
+                <div class="md:grid md:grid-cols-3 lg:gap-x-[200px]">
+                    <professional-block ImgLink="/assets/img/competency-20.svg" title="от 1ч" description="Настройка события GA в интернет-магазине"></professional-block>
+                    <professional-block ImgLink="/assets/img/competency-21.svg" title="от 20ч" description="Разработка мобильной версии сайта"></professional-block>
+                    <professional-block ImgLink="/assets/img/competency-22.svg" title="от 8ч" description="Интеграция модуля оплаты"></professional-block>
+                </div>
+            </div>
         </div>
     </div>
 </div>
