--- a/src/app/components/site/application/main.component.html
+++ b/src/app/components/site/application/main.component.html
@@ -10,12 +10,9 @@
     <app-support></app-support>
 </section>
 
-
-<!--
 <section class="section_expertise">
     <app-expertise></app-expertise>
-</section>-->
-
+</section>
 
 <section class="section_tariffs">
     <app-tariffs></app-tariffs>
@@ -23,7 +20,6 @@
 
 <section class="section_professionals">
     <app-professionals></app-professionals>
-    <app-cases></app-cases>
 </section>
 
 <section class="section_team">
@@ -34,7 +30,7 @@
     <app-cases></app-cases>
 </section>
 
-<!-- <section class="section_feedback">
+<section class="section_feedback">
     <app-feedback></app-feedback>
 </section>
 
@@ -50,4 +46,4 @@
     <app-footer></app-footer>
 </section>
 
-<router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
