--- a/src/app/components/site/application/main.component.html
+++ b/src/app/components/site/application/main.component.html
@@ -28,7 +28,7 @@
 </section> 
 
 
-<section class="section_feedback">
+<!-- <section class="section_feedback">
     <app-feedback></app-feedback>
 </section>
 
@@ -44,4 +44,4 @@
     <app-footer></app-footer>
 </section>
 
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
