--- a/src/app/components/site/professionals/professional-block.component.html
+++ b/src/app/components/site/professionals/professional-block.component.html
@@ -1,5 +1,5 @@
 <div class="desc-block">
-    <div class="flex sm:justify-center lg:justify-start">
+    <div class="flex justify-center lg:justify-start">
         <div>
             <img src="/assets/img/icon-bg.svg" alt="Логотип" class="icon-b">
             <img [src]="ImgLink" alt="Логотип" class="icon-m">
