--- a/src/app/components/site/application/main.component.html
+++ b/src/app/components/site/application/main.component.html
@@ -10,13 +10,13 @@
     <app-support></app-support>
 </section>
 
-<section class="section_expertise">
+<!-- <section class="section_expertise">
     <app-expertise></app-expertise>
 </section>
 
 <section class="section_tariffs">
     <app-tariffs></app-tariffs>
-</section>
+</section> -->
 
 <section class="section_professionals">
     <app-professionals></app-professionals>
@@ -26,7 +26,10 @@
     <app-team></app-team>
 </section> 
 
-
+<section class="section_professionals">
+    <app-cases></app-cases>
+</section>
+<!-- 
 <section class="section_feedback">
     <app-feedback></app-feedback>
 </section>
@@ -43,4 +46,4 @@
     <app-footer></app-footer>
 </section>
 
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
