--- a/src/app/components/site/cases/cases.component.css
+++ b/src/app/components/site/cases/cases.component.css
@@ -1,6 +1,6 @@
 #block6 {
-    width: 1180px;
-    height: 1656px;
+    width: 340px;
+    height: 2200px;
     flex-shrink: 0;
     margin-bottom: 160px;
 }
@@ -10,8 +10,8 @@
 }
 
 #block6 button {
-    width: 260px;
-    height: 60px;
+    width: 160px;
+    height: 34px;
     flex-shrink: 0;
     border-radius: 5px;
     border: 1px solid rgb(5, 12, 51, 0.2);
@@ -36,12 +36,23 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    margin-bottom: 60px;
+    margin-bottom: 20px;
 }
 
 @media only screen and (min-width: 640px) {
     #title {
         font-size: 42px;
+        margin-bottom: 60px;
     }
 
+    #block6 {
+        width: 1180px;
+        height: 1656px;
+    }
+
+    #block6 button {
+        width: 260px;
+        height: 60px;
+    }
+    
 }
