--- a/src/app/components/site/cases/imgs/cases-im-large.component.html
+++ b/src/app/components/site/cases/imgs/cases-im-large.component.html
@@ -2,7 +2,7 @@
     <div id="imblock">
         <img [src]="ImgLink" id="inner-img" alt="Image">
         <div class="flex">
-            <div class="relative z-10">
+            <div class="lg:relative z-10">
                 <div id="title"> {{ title }} </div>
             </div>
         </div>
