--- a/src/app/components/site/cases/imgs/cases-im-medium.component.css
+++ b/src/app/components/site/cases/imgs/cases-im-medium.component.css
@@ -1,13 +1,13 @@
 #imblock {
-    width: 380px;
-    height: 475px;
+    width: 340px;
+    height: 280px;
     flex-shrink: 0;
 }
 
 #inner-img {
     position: absolute;
-    width: 380px;
-    height: 475px;
+    width: 340px;
+    height: 260px;
     object-fit: cover;
     flex-shrink: 0;
     border-radius: 5px;
@@ -16,9 +16,9 @@
 #title {
     width: 300px;
     color: #FFF;
-    margin-top: 361px;
+    margin-top: 190px;
     font-family: Montserrat;
-    font-size: 18px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -35,4 +35,24 @@
     font-weight: 700;
     line-height: normal;
     opacity: 0.5;
+}
+
+@media only screen and (min-width: 1024px) {
+    #imblock {
+        width: 380px;
+        height: 475px;
+    }
+    
+    #inner-img {
+        width: 380px;
+        height: 475px;
+    }
+
+    #title {
+        width: 300px;
+        color: #FFF;
+        margin-top: 361px;
+        font-family: Montserrat;
+        font-size: 18px;
+    }
 }
