--- a/src/app/components/site/cases/imgs/cases-im-small.component.css
+++ b/src/app/components/site/cases/imgs/cases-im-small.component.css
@@ -1,12 +1,12 @@
 #imblock {
-    width: 380px;
-    height: 475px;
+    width: 340px;
+    height: 340px;
     flex-shrink: 0;
 }
 
 #inner-img {
-    width: 380px;
-    height: 215px;
+    width: 340px;
+    height: 120px;
     flex-shrink: 0;
     object-fit: cover;
     border-radius: 5px;
@@ -32,7 +32,7 @@
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
-    line-height: 22px; /* 157.143% */
+    line-height: 17px; /* 157.143% */
     opacity: 0.7;
 }
 
@@ -47,4 +47,15 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+}
+
+@media only screen and (min-width: 1024px) {
+    #imblock {
+        width: 380px;
+        height: 475px;
+    }
+    #inner-img {
+        width: 380px;
+        height: 215px;
+    }
 }
