--- a/src/app/components/site/tariffs/tariff-block.component.css
+++ b/src/app/components/site/tariffs/tariff-block.component.css
@@ -113,8 +113,8 @@
     background: #FFF;
     box-shadow: 0px 4px 60px 0px rgba(161, 161, 161, 0.25);
     transform: translateY(-23px);
-    margin-left: 15px;
-    margin-right: 15px;   
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .tariff-block {
@@ -123,8 +123,8 @@
     border-radius: 5px;
     border: 1px solid rgba(0, 0, 0, 0.10);
     background: #FFF;
-    margin-left: 15px;
-    margin-right: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
     margin-bottom: 47px;
 }
 
@@ -138,10 +138,14 @@
     }
 
     .tariff-block-main {
+        padding-left: 0px;
+        padding-right: 0px;   
         width: 420px;
     }
 
     .tariff-block {
+        padding-left: 0px;
+        padding-right: 0px;   
         width: 420px;
     } 
 }
