--- a/src/app/components/site/application/main.component.html
+++ b/src/app/components/site/application/main.component.html
@@ -10,13 +10,13 @@
     <app-support></app-support>
 </section>
 
-<!-- <section class="section_expertise">
+<section class="section_expertise">
     <app-expertise></app-expertise>
 </section>
 
 <section class="section_tariffs">
     <app-tariffs></app-tariffs>
-</section> -->
+</section>
 
 <section class="section_professionals">
     <app-professionals></app-professionals>
