--- a/src/app/components/site/expertise/expertise.component.html
+++ b/src/app/components/site/expertise/expertise.component.html
@@ -7,7 +7,7 @@
                 </div>
             </div>
             <div class="flex">
-                <div class="lg:grid lg:grid-cols-2">
+                <div class="md:grid md:grid-cols-2 gap-[80px] lg:gap-[10px]">
                     <expertise-desc innerText="Только системный подход – контроль версий, резервирование и тестирование!"></expertise-desc>
                     <expertise-desc innerText="Только Drupal сайты, не берем на поддержку сайты на других CMS!"></expertise-desc>
                     <expertise-desc innerText="Участвуем в разработке ядра Drupal и модулей на Drupal.org, разрабатываем <a href='/' class='text-orange-400'>свои модули Drupal</a>"></expertise-desc>
