--- a/src/app/components/site/professionals/professionals.component.css
+++ b/src/app/components/site/professionals/professionals.component.css
@@ -15,8 +15,8 @@
 
 @media only screen and (min-width: 640px) {
     #title {
-        font-size: 42px;
-        width: 370px;
+        font-size: 36px;
+        width: auto;
     }
 
     #block-9 {
