--- a/src/app/components/site/professionals/professionals.component.html
+++ b/src/app/components/site/professionals/professionals.component.html
@@ -1,6 +1,6 @@
 <div id="block-9">
     <div class="flex justify-center">
-        <div>
+        <div class="w-[90%]">
             <div id="title">Наши профессиональные разработчики выполняют быстро любые задачи</div>
             <div class="flex justify-center">
                 <div class="md:grid md:grid-cols-3 lg:gap-x-[200px]">
