--- a/src/app/components/site/feedback/feedback.component.html
+++ b/src/app/components/site/feedback/feedback.component.html
@@ -2,8 +2,8 @@
     <div class="flex justify-center">
         <div id="title">Отзывы</div>
     </div>
-    <img class="absolute opacity-[0.03] transform translate-x-[-106px] translate-y-[-112px]" src="/assets/img/Vector.svg" alt="Vector">
-    <img class="absolute z-2 opacity-[0.03] transform translate-x-[175px] translate-y-[-112px]" src="/assets/img/Vector.svg" alt="Vector">
+    <img class="absolute opacity-[0.03] w-full transform scale-[16%] translate-y-[-45%] translate-x-[-32%]" src="/assets/img/Vector.svg" alt="Vector">
+    <img class="absolute opacity-[0.03] w-full transform scale-[16%] translate-y-[-45%] translate-x-[-50%]" src="/assets/img/Vector.svg" alt="Vector">
 
     <div id="feedback" class="flex justify-center">
         <div class="absolute" id="decoration1"></div>
