--- a/src/app/components/site/application/main.component.html
+++ b/src/app/components/site/application/main.component.html
@@ -29,7 +29,7 @@
 <section class="section_professionals">
     <app-cases></app-cases>
 </section>
-<!-- 
+
 <section class="section_feedback">
     <app-feedback></app-feedback>
 </section>
@@ -46,4 +46,4 @@
     <app-footer></app-footer>
 </section>
 
-<router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
