--- a/src/app/components/site/clients/clients.component.css
+++ b/src/app/components/site/clients/clients.component.css
@@ -41,29 +41,57 @@
 }
 
 .img-block {
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
     border-radius: 5px;
     border: 1px solid #E5E5E5;
     display: flex;
     object-fit: none;
-    width: 291px;
-    height: 155px;
+    width: 211px;
+    height: 105px;
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
 }
 
 .img-block2 {
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
     border-radius: 5px;
     border: 1px solid #E5E5E5;
     display: flex;
     object-fit: none;
-    width: 291px;
-    height: 155px;
+    width: 211px;
+    height: 105px;
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
+}
+
+@media only screen and (min-width: 640px) {
+    .img-block {
+        width: 251px;
+        height: 115px;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    
+    .img-block2 {
+        width: 251px;
+        height: 115px;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .img-block {
+        width: 291px;
+        height: 155px;
+    }
+    
+    .img-block2 {
+        width: 291px;
+        height: 155px;
+    }
 }
