--- a/src/app/components/site/faq/faq-stroke.component.css
+++ b/src/app/components/site/faq/faq-stroke.component.css
@@ -1,10 +1,9 @@
 #title {
     color: var(--main-black, #050C33);
-
     margin-bottom: 10px;
     /* titles/h2 */
     font-family: Montserrat;
-    font-size: 20px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -22,4 +21,10 @@
     font-style: normal;
     font-weight: 550;
     line-height: normal;
+}
+
+@media only screen and (min-width: 820px) {
+    #title {
+        font-size: 24px;
+    }
 }
