--- a/src/app/components/site/footer/footer.component.css
+++ b/src/app/components/site/footer/footer.component.css
@@ -32,37 +32,10 @@
     margin-left: 7px;
 }
 
-button span {
-    color: var(--White, #FFF);
-    text-align: center;
-    font-family: Montserrat;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 12px; /* 100% */
-    letter-spacing: 0.72px;
-    text-transform: uppercase;
-}
-
-button {
-    margin-top: 50px;
-    border-radius: 5px;
-    border: 2px solid var(--icons-1, #F14D34);
-    width: 480px;
-    height: 60px;
-    flex-shrink: 0;
-    background-color: #F14D34;
-    transition: background-color 0.5s ease;
-    margin-bottom: 70px;
-}
-
-button:hover {
-    background-color: transparent;
-}
-
 #ghost-block {
     width: 100%;
     height: 100%;
+    background-size: 25%;
     background-image: url("/assets/img/D-flying.svg");
     background-position: center top;
     background-repeat: no-repeat;
@@ -71,6 +44,7 @@ button:hover {
 #ghost-block2 {
     width: 100%;
     height: 100%;
+    background-size: 25%;
     background-image: url("/assets/img/D-f2.svg");
     background-position: right bottom;
     background-repeat: no-repeat;
@@ -78,100 +52,17 @@ button:hover {
 
 #inner-block {
     margin-top: 62px;
-    width: 70%;
-}
-
-::-webkit-input-placeholder { 
-    color: #FFF;
-    font-family: Montserrat;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 16px; /* 114.286% */
-}
-::-moz-placeholder { 
-    color: #FFF;
-    font-family: Montserrat;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 16px; /* 114.286% */
-}
-:-moz-placeholder { 
-    color: #FFF;
-    font-family: Montserrat;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 16px; /* 114.286% */
-}
-:-ms-input-placeholder { 
-    color: #FFF;
-    font-family: Montserrat;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 16px; /* 114.286% */
-}
-
-.field {
-    color: #FFF;
-    font-family: Montserrat;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 16px; /* 114.286% */
-    padding-left: 24px;
-    width: 480px;
-    height: 67px;
-    flex-shrink: 0;
-    background-color: transparent;
-    border-radius: 5px;
-    border: 1px solid var(--White, rgba(255, 255, 255, 0.3));
-    margin-bottom: 7px;
-}
-
-.field2 {
-    resize: vertical;
-    color: #FFF;
-    font-family: Montserrat;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 16px; /* 114.286% */
-    padding-top: 15px;
-    padding-left: 24px;
-    width: 480px;
-    height: 127px;
-    flex-shrink: 0;
-    background-color: transparent;
-    border-radius: 5px;
-    border: 1px solid var(--White, rgba(255, 255, 255, 0.3));
-    margin-bottom: 7px;
-}
-
-.custom-checkbox .hidden-checkbox {
-    display: none;
-}
-  
-.custom-checkbox .checkmark {
-    display: inline-block;
-    width: 25px;
-    height: 25px;
-    background-image: url("/assets/img/checked-icon2.svg");
-}
-
-.custom-checkbox .hidden-checkbox:checked + .checkmark {
-    background-image: url("/assets/img/checked-icon.svg");
+    padding: 20px;
 }
 
 #title {
-    width: 480px;
+    width: 100%;
     color: #FFF;
 
+    text-align: center;
 /* titles/h2 */
     font-family: Montserrat;
-    font-size: 42px;
+    font-size: 28px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -200,17 +91,52 @@ button:hover {
     font-weight: 700;
     line-height: 150%; /* 27px */
     text-decoration-line: underline;
-    margin-bottom: 120px;
+    margin-bottom: 40px;
 }
 
 #desc {
-    width: 480px;
+    width: 100%;
     color: #FFF;
     font-family: Montserrat;
-    font-size: 14px;
+    text-align: left;
+    font-size: 12px;
     font-style: normal;
     font-weight: 500;
     line-height: 22px; /* 157.143% */
     opacity: 0.7;
-    margin-bottom: 140px;
+    margin-bottom: 20px;
+}
+
+@media only screen and (min-width: 1160px) {
+    #title {
+        font-size: 42px;
+        width: 480px;
+        text-align: left;
+    }
+
+    #desc {
+        width: 480px;
+        color: #FFF;
+        font-size: 14px;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    #desc {
+        margin-bottom: 140px;
+    }
+}
+
+@media only screen and (min-width: 640px) {
+    #title {
+        font-size: 42px;
+        width: 460px;
+        text-align: left;
+    }
+
+    #desc {
+        width: 480px;
+        color: #FFF;
+        font-size: 14px;
+    }
 }
