--- a/src/app/components/site/feedback/feedback.component.html
+++ b/src/app/components/site/feedback/feedback.component.html
@@ -2,15 +2,15 @@
     <div class="flex justify-center">
         <div id="title">Отзывы</div>
     </div>
-    <img class="absolute opacity-[0.03] transform translate-x-[-106px] translate-y-[-112px]" src="/assets/img/Vector.svg" alt="Vector">
-    <img class="absolute z-2 opacity-[0.03] transform translate-x-[175px] translate-y-[-112px]" src="/assets/img/Vector.svg" alt="Vector">
+    <img class="absolute opacity-[0.03] w-full transform scale-[16%] translate-y-[-45%] translate-x-[-32%]" src="/assets/img/Vector.svg" alt="Vector">
+    <img class="absolute opacity-[0.03] w-full transform scale-[16%] translate-y-[-45%] translate-x-[-50%]" src="/assets/img/Vector.svg" alt="Vector">
 
     <div id="feedback" class="flex justify-center">
         <div class="absolute" id="decoration1"></div>
         <div class="absolute translate-y-[32px]" id="decoration2"></div>
-        <div id="feedback-main-decoration" class="flex z-10">
+        <div id="feedback-main-decoration" class="sm:flex z-10">
             <div>
-                <ngx-slick-carousel #slickModal class="w-[651px] carousel" [config]="carouselConfig" (afterChange)="onChange($event)">
+                <ngx-slick-carousel #slickModal class="w-[370px] sm:w-[651px] carousel" [config]="carouselConfig" (afterChange)="onChange($event)">
                     <feedback-block ngxSlickItem class="slide" ImgLink="/assets/img/image 6.5.png" title="Команда Drupal Coder вызвала только положительные впечатления!" desc="Нуреев Александр, менеджер проекта Winamp Russian Community"></feedback-block>
                     <feedback-block ngxSlickItem class="slide" ImgLink="/assets/img/logo_0.png" title="Долгие поиски единственного и неповторимого мастера на многострадальный сайт www.cielparfum.com, который был собран крайне некомпетентным программистом и раз в месяц стабильно грозил погибнуть, привели меня на сайт и, в итоге, к ребятам из Drupal-coder. И вот уже практически полгода как не проходит и дня, чтобы я не поудивлялась и не порадовалась своему везению! Починили все, что не работало - от поиска до отображения меню. Провели редизайн - не отходя от желаемого, но со своими существенными и качественными дополнениями. Осуществили ряд проектов - конкурсы, тесты и тд. А уж мелких починок и доработок - не счесть! И главное - все качественно и быстро (не взирая на не самый ''быстрый'' тариф). Есть вопросы - замечательный Алексей всегда подскажет, поддержит, отремонтирует и/или просто сделает с нуля. Есть задумка для реализации - замечательный Сергей обсудит и предложит идеальный вариант. Есть проблема - замечательные Надежда и Роман починят, поправят, сделают! Ребята доказали, что эта CMS - мощная и грамотная система управления. Надеюсь, что наше сотрудничество затянется надолго! Спасибо!!!" desc="С уважением, Наталья Сушкова руководитель Отдела веб-проектов Группы компаний «Си Эль парфюм» "></feedback-block>
                     <feedback-block ngxSlickItem class="slide" ImgLink="/assets/img/logo_2.png" title="За довольно продолжительный срок (2014 - 2016 годы) весьма плотной работы (интернет-магазин на безумно замороченном Drupal 6: устраняли косяки разработчиков, ускоряли сайт, сделали множество новых функций и т.п.) - только самые добрые эмоции от работы с командой Initlab / Drupal-coder: всегда можно рассчитывать на быструю и толковую помощь, поддержку, совет. Даже сейчас, не смотря на то, что мы почти год не работали на постоянной основе (банально закончились задачи), случайно возникшая проблема с сайтом была решена мгновенно! В общем, только самые искренние благодарности и рекомендации!Спасибо! )" desc="С уважением, Владислав"></feedback-block>
@@ -20,11 +20,11 @@
                 </ngx-slick-carousel>           
             </div>
             <div>
-                <div class="flex h-[100%] items-center">
-                    <img src="/assets/img/Vector (1).svg" class="absolute">
+                <div class="flex h-[100%] max-sm:justify-center items-center">
+                    <img src="/assets/img/Vector (1).svg" class="absolute scale-y-[-1] rotate-90 max-sm:h-[40%] max-sm:mb-[50px]">
                     <div class="flex justify-center">
                         <div class="mx-[60px] button-block">
-                            <div class="flex">
+                            <div class="flex mt-[35px]">
                                 <button class="arrow-l" (click)="prev()"></button>
                                 <div class="w-[160px]"> 
                                     <div class="flex justify-center">
