--- a/src/app/components/site/application/main.component.html
+++ b/src/app/components/site/application/main.component.html
@@ -34,7 +34,7 @@
     <app-feedback></app-feedback>
 </section>
 
-<!-- <section class="section_clients">
+<section class="section_clients">
     <app-clients></app-clients>
 </section>
 
@@ -44,6 +44,6 @@
 
 <section class="section_footer">
     <app-footer></app-footer>
-</section> -->
+</section>
 
 <router-outlet></router-outlet>
