--- a/src/app/components/site/feedback/feedback-block.component.css
+++ b/src/app/components/site/feedback/feedback-block.component.css
@@ -1,6 +1,6 @@
 #inner-block {
     width: 270px;
-    margin-left: 25px;
+    margin-left: 48px;
 }
 
 #title {
@@ -15,7 +15,7 @@
 }
 
 #desc {
-    height: 49px;
+    height: auto;
     flex-shrink: 0;
     color: var(--main-black, #050C33);
     font-family: Montserrat;
@@ -28,8 +28,14 @@
 
 @media only screen and (min-width: 640px) {
     #inner-block {
+        width: 320px;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    #inner-block {
         width: 420px;
         margin-left: 128px;
     }
-    
 }
+
