--- a/src/app/components/site/clients/clients.component.css
+++ b/src/app/components/site/clients/clients.component.css
@@ -8,7 +8,7 @@
 
     /* titles/h2 */
     font-family: Montserrat;
-    font-size: 42px;
+    font-size: 24px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -69,6 +69,10 @@
 }
 
 @media only screen and (min-width: 640px) {
+    #title {
+        font-size: 42px;
+    }
+
     .img-block {
         width: 251px;
         height: 115px;
