--- a/src/app/components/site/footer/footer.component.html
+++ b/src/app/components/site/footer/footer.component.html
@@ -46,7 +46,7 @@
       </div>
       
       <div>
-        <svg class="w-screen" xmlns="http://www.w3.org/2000/svg" width="1440" height="1" viewBox="0 0 1440 1" fill="none">
+        <svg class="w-full" xmlns="http://www.w3.org/2000/svg" width="1440" height="1" viewBox="0 0 1440 1" fill="none">
           <path opacity="0.3" d="M0 0L1441 -0.000125976" stroke="white"/>
         </svg>
         <div class="flex justify-center">
